# cmake-example-library

./: CMakeLists.txt  CMakeSettings.json
foo/: CMakeLists.txt
